--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,7 @@
             `;
 
             const xhr = new XMLHttpRequest();
-            xhr.open('POST', 'http://127.0.0.1:5000/download', true);
+            xhr.open('POST', 'http://anyconvert.me:5000/download', true);
             xhr.setRequestHeader('Content-Type', 'application/json');
             xhr.responseType = 'blob';
 
