--- a/templates/index.html
+++ b/templates/index.html
@@ -89,6 +89,15 @@
     </form>
     <div id="status"></div>
 
+    <!-- Ko-fi Button Code
+    <div class="kofi-button">
+        <a href="https://ko-fi.com/yourprofile" target="_blank">
+            <img src="https://cdn.ko-fi.com/cdn/kofi5.png?v=2" alt="Buy Me a Coffee" style="height: 50px;">
+        </a>
+    </div> -->
+
+    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'Z8Z612S9J3');kofiwidget2.draw();</script> 
+
     <script>
         document.getElementById('downloadButton').addEventListener('click', function() {
             const url = document.getElementById('youtubeUrl').value;
